Bug: #2841 - Error sign displayed incorrectly and misaligned
- Error icon vertical adjustment now limited to table cells.

--- a/Ris/web/css/default.css
+++ b/Ris/web/css/default.css
@@ -226,12 +226,15 @@ a.collapsibleHeading {
 
 .errorProvider {
 	margin-left:0.5em;
-	position:relative;
-	top:-25%;
 	background-image:url(../images/errorprovider.gif);
 	background-repeat:no-repeat;
 	height:20px;
 	width:20px;
+}
+
+.divCell .errorProvider {
+	position:relative;
+	top:-25%;
 }
 
 .lookupButton {
